fixed nav spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,15 @@ img.card-img-top.img-fluid.img-limit {
   padding-top: 0px;
 }
 
+.navbar-brand img {
+  margin-top: -35px;
+  margin-right: 15px;
+}
+
+nav#bottom-nav {
+  padding: 20px;
+}
+
 #horiz-contain-1 {
      width:100%;
      height:100%;
